--- a/fRanz/DESCRIPTION
+++ b/fRanz/DESCRIPTION
@@ -15,7 +15,11 @@ Imports:
     Rcpp,
     R6,
     methods
+Suggests:
+    roxygen2,
+    testthat,
+    uuid
 LinkingTo: Rcpp
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 URL: https://github.com/UptakeOpenSource/fRanz
 BugReports: https://github.com/UptakeOpenSource/fRanz/issues
