chore(docker): Updated docker references to point at localhost instead of aliased services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,4 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_BROKER_ID: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
+      KAFKA_ZOOKEEPER_CONNECT: localhost:2181
