fix(cpp): Included useDynLib so you can actually install the package and use it

--- a/fRanz/NAMESPACE
+++ b/fRanz/NAMESPACE
@@ -6,3 +6,5 @@ export(KafkaConsume)
 export(KafkaProduce)
 export(RdSubscribe)
 importFrom(R6,R6Class)
+importFrom(Rcpp,sourceCpp)
+useDynLib(fRanz)
