--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 before_install:
   - mkdir dest
   - make librdkafka LIBRDKAFKA_CONF=--prefix=../dest
-  - export LD_LIBRARY_PATH=LD_LIBRARY_PATH:../dest/lib
+  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:../dest/lib
   - docker-compose up -d 
   - sleep 20
   - cd fRanz
